Bug 1850954 - Back out URL protocol spec-compliant restrictions added in bug 1347459 for causing webcompat issues; r=valentin,necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D187221